add ScalaChimeraNailgun sources to project
restructured the file tree to match the maven structure
copied sources into src/main/scala
moved ipy sources to src/main/ipy

--- a/.deployrc
+++ b/.deployrc
@@ -4,23 +4,22 @@ check:       "./src/skel/usr/local/bin/check-archives.sh"      -> "root@christia
 pack-files:  "./src/skel/usr/local/bin/pack-files.sh"          -> "root@christian-vm01:/usr/local/bin/pack-files.sh"
 hsm-internal:"./src/skel/usr/share/dcache/lib/hsm-internal.sh" -> "root@dcache-lab002:/usr/share/dcache/lib/hsm-internal.sh"
 smart:       "./src/skel/usr/local/bin/smartpackd.py"          -> "root@christian-vm01:/usr/local/bin/smartpackd.py"
-doc:         "./src/tex/SmallFiles.tex"                        -> "/dev/null"
 # flags contains both flag dependent scripts
 flags:       "./src/skel/usr/local/bin/pack-files.sh"          -> "root@christian-vm01:/usr/local/bin/pack-files.sh"
 flags:       "./src/skel/usr/share/dcache/lib/hsm-internal.sh" -> "root@dcache-lab002:/usr/share/dcache/lib/hsm-internal.sh"
 # fs operations on nfs 4.1 speed measurement results from christian-vm01
-results:     "./src/ipy/create.csv"                            -> "root@christian-vm01:/root/speedtests/speed_create.csv"
-results:     "./src/ipy/find.csv"                              -> "root@christian-vm01:/root/speedtests/speed_find.csv"
-results:     "./src/ipy/ls.csv"                                -> "root@christian-vm01:/root/speedtests/speed_ls.csv"
-results:     "./src/ipy/stat.csv"                              -> "root@christian-vm01:/root/speedtests/speed_stat.csv"
-results:     "./src/ipy/read.csv"                              -> "root@christian-vm01:/root/speedtests/speed_read.csv"
-results:     "./src/ipy/write.csv"                             -> "root@christian-vm01:/root/speedtests/speed_write.csv"
-results:     "./src/ipy/tar.csv"                               -> "root@christian-vm01:/root/speedtests/speed_tar.csv"
-results:     "./src/ipy/zip.csv"                               -> "root@christian-vm01:/root/speedtests/speed_zip.csv"
+results:     "./src/main/ipy/create.csv"                            -> "root@christian-vm01:/root/speedtests/speed_create.csv"
+results:     "./src/main/ipy/find.csv"                              -> "root@christian-vm01:/root/speedtests/speed_find.csv"
+results:     "./src/main/ipy/ls.csv"                                -> "root@christian-vm01:/root/speedtests/speed_ls.csv"
+results:     "./src/main/ipy/stat.csv"                              -> "root@christian-vm01:/root/speedtests/speed_stat.csv"
+results:     "./src/main/ipy/read.csv"                              -> "root@christian-vm01:/root/speedtests/speed_read.csv"
+results:     "./src/main/ipy/write.csv"                             -> "root@christian-vm01:/root/speedtests/speed_write.csv"
+results:     "./src/main/ipy/tar.csv"                               -> "root@christian-vm01:/root/speedtests/speed_tar.csv"
+results:     "./src/main/ipy/zip.csv"                               -> "root@christian-vm01:/root/speedtests/speed_zip.csv"
 # second batch of tests
-results:     "./src/ipy/create2.csv"                           -> "root@christian-vm01:/root/speedtests/create2.csv"
-results:     "./src/ipy/find2.csv"                             -> "root@christian-vm01:/root/speedtests/find2.csv"
-results:     "./src/ipy/ls2.csv"                               -> "root@christian-vm01:/root/speedtests/ls2.csv"
-results:     "./src/ipy/stat2.csv"                             -> "root@christian-vm01:/root/speedtests/stat2.csv"
-results:     "./src/ipy/read2.csv"                             -> "root@christian-vm01:/root/speedtests/read2.csv"
-results:     "./src/ipy/write2.csv"                            -> "root@christian-vm01:/root/speedtests/write2.csv"
+results:     "./src/main/ipy/create2.csv"                           -> "root@christian-vm01:/root/speedtests/create2.csv"
+results:     "./src/main/ipy/find2.csv"                             -> "root@christian-vm01:/root/speedtests/find2.csv"
+results:     "./src/main/ipy/ls2.csv"                               -> "root@christian-vm01:/root/speedtests/ls2.csv"
+results:     "./src/main/ipy/stat2.csv"                             -> "root@christian-vm01:/root/speedtests/stat2.csv"
+results:     "./src/main/ipy/read2.csv"                             -> "root@christian-vm01:/root/speedtests/read2.csv"
+results:     "./src/main/ipy/write2.csv"                            -> "root@christian-vm01:/root/speedtests/write2.csv"
