--- a/.deployrc
+++ b/.deployrc
@@ -8,18 +8,18 @@ smart:       "./src/skel/usr/local/bin/smartpackd.py"          -> "root@christia
 flags:       "./src/skel/usr/local/bin/pack-files.sh"          -> "root@christian-vm01:/usr/local/bin/pack-files.sh"
 flags:       "./src/skel/usr/share/dcache/lib/hsm-internal.sh" -> "root@dcache-lab002:/usr/share/dcache/lib/hsm-internal.sh"
 # fs operations on nfs 4.1 speed measurement results from christian-vm01
-results:     "./src/main/ipy/create.csv"                            -> "root@christian-vm01:/root/speedtests/speed_create.csv"
-results:     "./src/main/ipy/find.csv"                              -> "root@christian-vm01:/root/speedtests/speed_find.csv"
-results:     "./src/main/ipy/ls.csv"                                -> "root@christian-vm01:/root/speedtests/speed_ls.csv"
-results:     "./src/main/ipy/stat.csv"                              -> "root@christian-vm01:/root/speedtests/speed_stat.csv"
-results:     "./src/main/ipy/read.csv"                              -> "root@christian-vm01:/root/speedtests/speed_read.csv"
-results:     "./src/main/ipy/write.csv"                             -> "root@christian-vm01:/root/speedtests/speed_write.csv"
-results:     "./src/main/ipy/tar.csv"                               -> "root@christian-vm01:/root/speedtests/speed_tar.csv"
-results:     "./src/main/ipy/zip.csv"                               -> "root@christian-vm01:/root/speedtests/speed_zip.csv"
-# second batch of tests
-results:     "./src/main/ipy/create2.csv"                           -> "root@christian-vm01:/root/speedtests/create2.csv"
-results:     "./src/main/ipy/find2.csv"                             -> "root@christian-vm01:/root/speedtests/find2.csv"
-results:     "./src/main/ipy/ls2.csv"                               -> "root@christian-vm01:/root/speedtests/ls2.csv"
-results:     "./src/main/ipy/stat2.csv"                             -> "root@christian-vm01:/root/speedtests/stat2.csv"
-results:     "./src/main/ipy/read2.csv"                             -> "root@christian-vm01:/root/speedtests/read2.csv"
-results:     "./src/main/ipy/write2.csv"                            -> "root@christian-vm01:/root/speedtests/write2.csv"
+results:     "./src/main/resources/csv/create.csv"             -> "root@christian-vm01:/root/speedtests/speed_create.csv"
+results:     "./src/main/resources/csv/find.csv"               -> "root@christian-vm01:/root/speedtests/speed_find.csv"
+results:     "./src/main/resources/csv/ls.csv"                 -> "root@christian-vm01:/root/speedtests/speed_ls.csv"
+results:     "./src/main/resources/csv/stat.csv"               -> "root@christian-vm01:/root/speedtests/speed_stat.csv"
+results:     "./src/main/resources/csv/read.csv"               -> "root@christian-vm01:/root/speedtests/speed_read.csv"
+results:     "./src/main/resources/csv/write.csv"              -> "root@christian-vm01:/root/speedtests/speed_write.csv"
+results:     "./src/main/resources/csv/tar.csv"                -> "root@christian-vm01:/root/speedtests/speed_tar.csv"
+results:     "./src/main/resources/csv/zip.csv"                -> "root@christian-vm01:/root/speedtests/speed_zip.csv"
+#second batch of tests
+results:     "./src/main/resources/csv/create2.csv"            -> "root@christian-vm01:/root/speedtests/create2.csv"
+results:     "./src/main/resources/csv/find2.csv"              -> "root@christian-vm01:/root/speedtests/find2.csv"
+results:     "./src/main/resources/csv/ls2.csv"                -> "root@christian-vm01:/root/speedtests/ls2.csv"
+results:     "./src/main/resources/csv/stat2.csv"              -> "root@christian-vm01:/root/speedtests/stat2.csv"
+results:     "./src/main/resources/csv/read2.csv"              -> "root@christian-vm01:/root/speedtests/read2.csv"
+results:     "./src/main/resources/csv/write2.csv"             -> "root@christian-vm01:/root/speedtests/write2.csv"
