--- a/.deployrc
+++ b/.deployrc
@@ -16,10 +16,13 @@ results:     "./src/main/resources/csv/read.csv"               -> "root@christia
 results:     "./src/main/resources/csv/write.csv"              -> "root@christian-vm01:/root/speedtests/speed_write.csv"
 results:     "./src/main/resources/csv/tar.csv"                -> "root@christian-vm01:/root/speedtests/speed_tar.csv"
 results:     "./src/main/resources/csv/zip.csv"                -> "root@christian-vm01:/root/speedtests/speed_zip.csv"
-#second batch of tests
+# second batch of tests
 results:     "./src/main/resources/csv/create2.csv"            -> "root@christian-vm01:/root/speedtests/create2.csv"
 results:     "./src/main/resources/csv/find2.csv"              -> "root@christian-vm01:/root/speedtests/find2.csv"
 results:     "./src/main/resources/csv/ls2.csv"                -> "root@christian-vm01:/root/speedtests/ls2.csv"
 results:     "./src/main/resources/csv/stat2.csv"              -> "root@christian-vm01:/root/speedtests/stat2.csv"
 results:     "./src/main/resources/csv/read2.csv"              -> "root@christian-vm01:/root/speedtests/read2.csv"
 results:     "./src/main/resources/csv/write2.csv"             -> "root@christian-vm01:/root/speedtests/write2.csv"
+# archiving tests
+results:     "./src/main/resources/csv/tar6.csv"               -> "root@christian-vm01:/root/speedtests/tar6.csv"
+results:     "./src/main/resources/csv/zip6.csv"               -> "root@christian-vm01:/root/speedtests/zip6.csv"
