--- a/.deployrc
+++ b/.deployrc
@@ -8,21 +8,21 @@ smart:       "./src/skel/usr/local/bin/smartpackd.py"          -> "root@christia
 flags:       "./src/skel/usr/local/bin/pack-files.sh"          -> "root@christian-vm01:/usr/local/bin/pack-files.sh"
 flags:       "./src/skel/usr/share/dcache/lib/hsm-internal.sh" -> "root@dcache-lab002:/usr/share/dcache/lib/hsm-internal.sh"
 # fs operations on nfs 4.1 speed measurement results from christian-vm01
-results:     "./src/main/resources/csv/create.csv"             -> "root@christian-vm01:/root/speedtests/speed_create.csv"
-results:     "./src/main/resources/csv/find.csv"               -> "root@christian-vm01:/root/speedtests/speed_find.csv"
-results:     "./src/main/resources/csv/ls.csv"                 -> "root@christian-vm01:/root/speedtests/speed_ls.csv"
-results:     "./src/main/resources/csv/stat.csv"               -> "root@christian-vm01:/root/speedtests/speed_stat.csv"
-results:     "./src/main/resources/csv/read.csv"               -> "root@christian-vm01:/root/speedtests/speed_read.csv"
-results:     "./src/main/resources/csv/write.csv"              -> "root@christian-vm01:/root/speedtests/speed_write.csv"
-results:     "./src/main/resources/csv/tar.csv"                -> "root@christian-vm01:/root/speedtests/speed_tar.csv"
-results:     "./src/main/resources/csv/zip.csv"                -> "root@christian-vm01:/root/speedtests/speed_zip.csv"
+#results:     "./src/main/resources/csv/create.csv"             -> "root@christian-vm01:/root/speedtests/speed_create.csv"
+#results:     "./src/main/resources/csv/find.csv"               -> "root@christian-vm01:/root/speedtests/speed_find.csv"
+#results:     "./src/main/resources/csv/ls.csv"                 -> "root@christian-vm01:/root/speedtests/speed_ls.csv"
+#results:     "./src/main/resources/csv/stat.csv"               -> "root@christian-vm01:/root/speedtests/speed_stat.csv"
+#results:     "./src/main/resources/csv/read.csv"               -> "root@christian-vm01:/root/speedtests/speed_read.csv"
+#results:     "./src/main/resources/csv/write.csv"              -> "root@christian-vm01:/root/speedtests/speed_write.csv"
+#results:     "./src/main/resources/csv/tar.csv"                -> "root@christian-vm01:/root/speedtests/speed_tar.csv"
+#results:     "./src/main/resources/csv/zip.csv"                -> "root@christian-vm01:/root/speedtests/speed_zip.csv"
 # second batch of tests
-results:     "./src/main/resources/csv/create2.csv"            -> "root@christian-vm01:/root/speedtests/create2.csv"
-results:     "./src/main/resources/csv/find2.csv"              -> "root@christian-vm01:/root/speedtests/find2.csv"
-results:     "./src/main/resources/csv/ls2.csv"                -> "root@christian-vm01:/root/speedtests/ls2.csv"
-results:     "./src/main/resources/csv/stat2.csv"              -> "root@christian-vm01:/root/speedtests/stat2.csv"
-results:     "./src/main/resources/csv/read2.csv"              -> "root@christian-vm01:/root/speedtests/read2.csv"
-results:     "./src/main/resources/csv/write2.csv"             -> "root@christian-vm01:/root/speedtests/write2.csv"
+#results:     "./src/main/resources/csv/create2.csv"            -> "root@christian-vm01:/root/speedtests/create2.csv"
+#results:     "./src/main/resources/csv/find2.csv"              -> "root@christian-vm01:/root/speedtests/find2.csv"
+#results:     "./src/main/resources/csv/ls2.csv"                -> "root@christian-vm01:/root/speedtests/ls2.csv"
+#results:     "./src/main/resources/csv/stat2.csv"              -> "root@christian-vm01:/root/speedtests/stat2.csv"
+#results:     "./src/main/resources/csv/read2.csv"              -> "root@christian-vm01:/root/speedtests/read2.csv"
+#results:     "./src/main/resources/csv/write2.csv"             -> "root@christian-vm01:/root/speedtests/write2.csv"
 # archiving tests
-results:     "./src/main/resources/csv/tar6.csv"               -> "root@christian-vm01:/root/speedtests/tar6.csv"
+#results:     "./src/main/resources/csv/tar6.csv"               -> "root@christian-vm01:/root/speedtests/tar6.csv"
 results:     "./src/main/resources/csv/zip6.csv"               -> "root@christian-vm01:/root/speedtests/zip6.csv"
