add notebooks for installing head and pool nodes

--- a/.deployrc
+++ b/.deployrc
@@ -63,3 +63,13 @@ flags:       "./src/skel/usr/share/dcache/lib/hsm-internal-by-dir.sh"       -> "
 
 # pathof tests
 results:     "./src/main/resources/csv/pathof.csv"                          -> "root@christian-vm01:/root/speedtests/pathof.csv"
+
+##################
+# DEPLOY ON CEPH #
+##################
+ceph-ipy:    "./src/main/ipy/sf-patch_for_pool_node.ipynb"                  -> "root@ceph-osd1:/root/IPy-Notebook/sf-patch_for_pool_node.ipynb"
+ceph-ipy:    "./src/main/ipy/sf-patch_for_pool_node.ipynb"                  -> "root@ceph-osd2:/root/IPy-Notebook/sf-patch_for_pool_node.ipynb"
+ceph-ipy:    "./src/main/ipy/install_pool_node.ipynb"                       -> "root@ceph-osd1:/root/IPy-Notebook/install_pool_node.ipynb"
+ceph-ipy:    "./src/main/ipy/install_pool_node.ipynb"                       -> "root@ceph-osd2:/root/IPy-Notebook/install_pool_node.ipynb"
+ceph-ipy:    "./src/main/ipy/install_head_node.ipynb"                       -> "root@ceph-mon1:/root/IPy-Notebook/install_head_node.ipynb"
+ceph-ipy:    "./src/main/ipy/sf-patch_for_head_node.ipynb"                  -> "root@ceph-mon1:/root/IPy-Notebook/sf-patch_for_head_node.ipynb"
