update container.conf format

--- a/src/skel/etc/dcache/container.conf
+++ b/src/skel/etc/dcache/container.conf
@@ -33,7 +33,7 @@
 # Pack remaining files after 600 minutes. To ensure archive integrity the
 # archives content table is compared with file list.
 
-# [/pnfs/sf-root/split/**]
+# [/pnfs/sf-root/split/.*]
 # size=5G 
 # minAge=120 
 # maxAge=600 
@@ -41,12 +41,12 @@
 
 
 # Example 3:
-# Pack all files matching the glob "/pnfs/sf-root/home/*/archive into archives
+# Pack all files matching the regular expression "^/pnfs/sf-root/home/[^/]*/archive$ into archives
 # of size 1G, after they exist for at least 1440 minutes.  Pack remaining files
 # after 14400 minutes. To ensure archive integrity the archive is unpacked and
 # all files will be compared by their checksums.
 
-# [/pnfs/sf-root/home/*/archive] 
+# [/pnfs/sf-root/home/[^/]*/archive]
 # size=1G 
 # minAge=1440 
 # maxAge=14400 
