--- a/src/skel/etc/dcache/container.conf
+++ b/src/skel/etc/dcache/container.conf
@@ -6,22 +6,24 @@
  
 
 # # Global configuration:
-# [global]
-# mongoUrl=localhost/smallfiles
+# [DEFAULT]
+# mongoUri=mongodb://localhost/
+# mongoDb=smallfiles
 # dataRoot=/data
-# mountPoint=/pnfs/4
+# mountPoint=/space/sf/dcache
 # hsmBase=hsm
 
 
 # Example 1:
 # Pack all files below the directory "/pnfs/sf-root/all" into archives of size
 # 20G, potentially mixing files from different subdirectories as soon as they
-# arrive (min age = 0) and collect remaining files if their combined size is
-# less than the target archive size (here 20G) after (max age =) 60 minutes.
+# arrive (minAge = 0) and collect remaining files if their combined size is
+# less than the target archive size (here 20G) after (maxAge =) 60 minutes.
 # No additional checks are done to ensure archive integrity.
 
-# [/pnfs/sf-root/all] 
-# size=20G 
+# [Example1] 
+# pathExpression=/pnfs/sf-root/all
+# archiveSize=20G 
 # minAge=0 
 # maxAge=60 
 # verify=off
@@ -33,8 +35,9 @@
 # Pack remaining files after 600 minutes. To ensure archive integrity the
 # archives content table is compared with file list.
 
-# [/pnfs/sf-root/split/.*]
-# size=5G 
+# [Example2]
+# pathExpression=/pnfs/sf-root/split/.*
+# archiveSize=5G
 # minAge=120 
 # maxAge=600 
 # verify=filelist
@@ -42,12 +45,13 @@
 
 # Example 3:
 # Pack all files matching the regular expression "^/pnfs/sf-root/home/[^/]*/archive$ into archives
-# of size 1G, after they exist for at least 1440 minutes.  Pack remaining files
+# of size 1G, after they exist for at least 1440 minutes. Pack remaining files
 # after 14400 minutes. To ensure archive integrity the archive is unpacked and
 # all files will be compared by their checksums.
 
-# [/pnfs/sf-root/home/[^/]*/archive]
-# size=1G 
+# [Example3]
+# pathExpression=/pnfs/sf-root/home/[^/]*/archive
+# archiveSize=1G 
 # minAge=1440 
 # maxAge=14400 
 # verify=chksum
