migrate to python for packing
introduce pack-files.py

--- a/src/skel/etc/dcache/container.conf
+++ b/src/skel/etc/dcache/container.conf
@@ -11,7 +11,6 @@
 # mongoDb=smallfiles
 # dataRoot=/data
 # mountPoint=/space/sf/dcache
-# hsmBase=hsm
 
 
 # Example 1:
@@ -20,9 +19,13 @@
 # arrive (minAge = 0) and collect remaining files if their combined size is
 # less than the target archive size (here 20G) after (maxAge =) 60 minutes.
 # No additional checks are done to ensure archive integrity.
+#
+# Please note that the archivePath must not start with /
+
 
 # [Example1] 
 # pathExpression=/pnfs/sf-root/all
+# archivePath=example1
 # archiveSize=20G 
 # minAge=0 
 # maxAge=60 
@@ -37,6 +40,7 @@
 
 # [Example2]
 # pathExpression=/pnfs/sf-root/split/.*
+# archivePath=example2
 # archiveSize=5G
 # minAge=120 
 # maxAge=600 
@@ -51,6 +55,7 @@
 
 # [Example3]
 # pathExpression=/pnfs/sf-root/home/[^/]*/archive
+# archivePath=example3
 # archiveSize=1G 
 # minAge=1440 
 # maxAge=14400 
