multiple containers per pattern
split fileExpression into pathExpression and fileExpression.
Every directory matching pathExpression will get its own containers and
will be filled only by files matching fileExpression.

E.g., pathExpression=/home/[^/]*/
      fileExpression=.*\.jpg

will create different containers for /home/ernie and /home/bert and will
only store jpg files into them.

--- a/src/skel/etc/dcache/container.conf
+++ b/src/skel/etc/dcache/container.conf
@@ -26,6 +26,7 @@
 
 # [Example1] 
 # pathExpression=/pnfs/sf-root/all
+# fileExpression=.*
 # archivePath=example1
 # archiveSize=20G 
 # minAge=0 
@@ -41,6 +42,7 @@
 
 # [Example2]
 # pathExpression=/pnfs/sf-root/split/.*
+# fileExpression=.*
 # archivePath=example2
 # archiveSize=5G
 # minAge=120 
@@ -56,6 +58,7 @@
 
 # [Example3]
 # pathExpression=/pnfs/sf-root/home/[^/]*/archive
+# fileExpression=.*
 # archivePath=example3
 # archiveSize=1G 
 # minAge=1440 
