filter by sGroup and OSMTemplate
add two additional fields to filter by sGroup and storeName.

--- a/src/skel/etc/dcache/container.conf
+++ b/src/skel/etc/dcache/container.conf
@@ -27,6 +27,8 @@
 # [Example1] 
 # pathExpression=/pnfs/sf-root/all
 # fileExpression=.*
+# sGroup=.*
+# storeName=.*
 # archivePath=example1
 # archiveSize=20G 
 # minAge=0 
@@ -43,6 +45,8 @@
 # [Example2]
 # pathExpression=/pnfs/sf-root/split/.*
 # fileExpression=.*
+# sGroup=.*
+# storeName=.*
 # archivePath=example2
 # archiveSize=5G
 # minAge=120 
@@ -59,6 +63,8 @@
 # [Example3]
 # pathExpression=/pnfs/sf-root/home/[^/]*/archive
 # fileExpression=.*
+# sGroup=.*
+# storeName=.*
 # archivePath=example3
 # archiveSize=1G 
 # minAge=1440 
