--- a/src/skel/etc/dcache/container.conf
+++ b/src/skel/etc/dcache/container.conf
@@ -7,6 +7,8 @@
 
 # # Global configuration:
 # [DEFAULT]
+# archiveUser=dcache
+# archiveMod=0777
 # mongoUri=mongodb://localhost/
 # mongoDb=smallfiles
 # dataRoot=/data
