update sample config file

--- a/src/skel/etc/dcache/container.conf
+++ b/src/skel/etc/dcache/container.conf
@@ -8,12 +8,14 @@
 # # Global configuration:
 # [DEFAULT]
 # archiveUser=dcache
-# archiveMod=0777
+# archiveMode=0777
 # mongoUri=mongodb://localhost/
 # mongoDb=smallfiles
 # dataRoot=/data
 # mountPoint=/space/sf/dcache
 # loopDelay=5
+# logFile=/var/log/dcache/container.log
+# logLevel=INFO
 
 
 # Example 1:
