update example configuration to contain scriptId

--- a/src/skel/etc/dcache/container.conf
+++ b/src/skel/etc/dcache/container.conf
@@ -7,8 +7,9 @@
 
 # # Global configuration:
 # [DEFAULT]
+# scriptId=pack
 # archiveUser=dcache
-# archiveMode=0777
+# archiveMode=0644
 # mongoUri=mongodb://localhost/
 # mongoDb=smallfiles
 # dataRoot=/data
