updated patterns for logstash

--- a/src/skel/etc/logstash/conf.d/logstash.conf
+++ b/src/skel/etc/logstash/conf.d/logstash.conf
@@ -24,19 +24,26 @@ input {
 
 filter {
 
+  grok {
+    patterns_dir => [ "/opt/logstash/patterns", "/etc/logstash/patterns" ]
+    
+    match => { "message" => "%{ENTRY_PREFIX}%{GREEDYDATA:logline}" }
+  }
+  
   if [type] == "fillmetadata" 
   {
     grok {
       patterns_dir => [ "/opt/logstash/patterns", "/etc/logstash/patterns" ]
 
-      match => { "message" => "%{FOUND_FILES}" }
-      match => { "message" => "%{INFO_REMOVING_ENTRY}" }
-      match => { "message" => "%{READ_CONFIG}" }
-      match => { "message" => "%{UPDATED_RECORD}" }
-      match => { "message" => "%{WARN_CONFAILURE}" }
-      match => { "message" => "%{WARN_CURSOR_FAIL}" }
-      match => { "message" => "%{WARN_IOERROR}" }
-      match => { "message" => "%{WARN_KEYERROR}" }
+      match => { "logline" => "%{FOUND_FILES}" }
+      match => { "logline" => "%{INFO_REMOVING_ENTRY}" }
+      match => { "logline" => "%{INFO_SLEEPING}" }
+      match => { "logline" => "%{READ_CONFIG}" }
+      match => { "logline" => "%{UPDATED_RECORD}" }
+      match => { "logline" => "%{WARN_CONFAILURE}" }
+      match => { "logline" => "%{WARN_CURSOR_FAIL}" }
+      match => { "logline" => "%{WARN_IOERROR}" }
+      match => { "logline" => "%{WARN_KEYERROR}" }
     }
 
     date {
@@ -49,40 +56,52 @@ filter {
     grok {
       patterns_dir => [ "/opt/logstash/patterns", "/etc/logstash/patterns" ]
 
-      match => { "message" => "%{INFO_CLEANING_UP}" }
-      match => { "message" => "%{INFO_ENOUGH_BYTES}" }
-      match => { "message" => "%{INFO_FOUND_FILES}" }
-      match => { "message" => "%{INFO_RUNNING_PACKAGERS}" }
-      match => { "message" => "%{INFO_NEW_CONTAINER}" }
-      match => { "message" => "%{INFO_NOT_ENOUGH_BYTES}" }
-      match => { "message" => "%{INFO_NOT_ENOUGH_BYTES}" }
-      match => { "message" => "%{INFO_NO_OLD_FILES}" }
-      match => { "message" => "%{INFO_STORE_OLD_SUCCESS}" }
-      match => { "message" => "%{INFO_STORE_SUCCESS}" }
-      match => { "message" => "%{INFO_CLEANING_UP}" }
-      match => { "message" => "%{ADDED_FILE_PACKAGER}" }
-      match => { "message" => "%{WARN_ADD_FILE_ERROR}" }
-      match => { "message" => "%{WARN_CHKSUM_NOT_IMPLEMENTED}" }
-      match => { "message" => "%{WARN_REMOVING_UNFUL}" }
-      match => { "message" => "%{WARN_UNKNOWN_VERIFICATION}" }
-      match => { "message" => "%{WARN_VERIFY_FAILED}" }
-      match => { "message" => "%{WARN_VERIFY_OLD_FAILED}" }
-      match => { "message" => "%{ERROR_MISSING_OPTION}" }
-      match => { "message" => "%{ERROR_PACKAGER_FAILURE}" }
-      match => { "message" => "%{ERROR_PACKAGER_IOERROR}" }
-      match => { "message" => "%{ERROR_REMOVING_CONTAINER}" }
-      match => { "message" => "%{CRITICAL_ARCHIVE_NOT_FOUND}" }
-      match => { "message" => "%{DEBUG_ADDED_FILE_CONTAINER}" }
-      match => { "message" => "%{DEBUG_CLOSE_OLD}" }
-      match => { "message" => "%{DEBUG_CLOSING_FULL}" }
-      match => { "message" => "%{DEBUG_LOOKING_FOR_FILES}" }
-      match => { "message" => "%{DEBUG_NEXT_FILE_PACKAGER}" }
-      match => { "message" => "%{DEBUG_NO_OLD_FILES}" }
-      match => { "message" => "%{DEBUG_OLD_FILES}" }
-      match => { "message" => "%{DEBUG_OPTIONS}" }
-      match => { "message" => "%{DEBUG_PROPERTIES}" }
-      match => { "message" => "%{DEBUG_REMAINING_BYTES}" }
-      match => { "message" => "%{DEBUG_REMOVING_FILE_ENTRY}" }
+      match => { "logline" => "(?:before)%{DATA:message}" }
+
+      match => { "logline" => "%{INFO_READ_CONFIG}" }
+      match => { "logline" => "%{INFO_DB_CONNECTION}" }
+      match => { "logline" => "%{INFO_SANITIZING}" }
+      match => { "logline" => "%{INFO_FOUND_FILES}" }
+      match => { "logline" => "%{INFO_ADDED_PACKAGER}" }
+      match => { "logline" => "%{INFO_NEW_CONTAINER}" }
+      match => { "logline" => "%{INFO_SLEEPING}" }
+      match => { "logline" => "%{DEBUG_LOOKING_FOR_FILES}" }
+      match => { "logline" => "%{DEBUG_NO_OLD_FILES}" }
+      match => { "logline" => "%{DEBUG_NEXT_FILE_PACKAGER}" }
+      match => { "logline" => "%{DEBUG_REMAINING_BYTES}" }
+      match => { "logline" => "%{ADDED_FILE_PACKAGER}" }
+
+      match => { "logline" => "%{DEBUG_ADDED_FILE_CONTAINER}" }
+      match => { "logline" => "%{DEBUG_CLOSE_OLD}" }
+      match => { "logline" => "%{DEBUG_CLOSING_FULL}" }
+      match => { "logline" => "%{DEBUG_NEXT_FILE_PACKAGER}" }
+      match => { "logline" => "%{DEBUG_OLD_FILES}" }
+      match => { "logline" => "%{DEBUG_OPTIONS}" }
+      match => { "logline" => "%{DEBUG_PROPERTIES}" }
+      match => { "logline" => "%{DEBUG_REMOVING_FILE_ENTRY}" }
+
+      match => { "logline" => "%{INFO_CLEANING_UP}" }
+      match => { "logline" => "%{INFO_ENOUGH_BYTES}" }
+      match => { "logline" => "%{INFO_GROUP_PACKAGERS}" }
+      match => { "logline" => "%{INFO_RUNNING_PACKAGERS}" }
+      match => { "logline" => "%{INFO_NOT_ENOUGH_BYTES}" }
+      match => { "logline" => "%{INFO_NOT_ENOUGH_BYTES}" }
+      match => { "logline" => "%{INFO_NO_OLD_FILES}" }
+      match => { "logline" => "%{INFO_STORE_OLD_SUCCESS}" }
+      match => { "logline" => "%{INFO_STORE_SUCCESS}" }
+      match => { "logline" => "%{INFO_CLEANING_UP}" }
+      match => { "logline" => "%{ENTRY_PREFIX}%{DATA:message}" }
+      match => { "logline" => "%{WARN_ADD_FILE_ERROR}" }
+      match => { "logline" => "%{WARN_CHKSUM_NOT_IMPLEMENTED}" }
+      match => { "logline" => "%{WARN_REMOVING_UNFUL}" }
+      match => { "logline" => "%{WARN_UNKNOWN_VERIFICATION}" }
+      match => { "logline" => "%{WARN_VERIFY_FAILED}" }
+      match => { "logline" => "%{WARN_VERIFY_OLD_FAILED}" }
+      match => { "logline" => "%{ERROR_MISSING_OPTION}" }
+      match => { "logline" => "%{ERROR_PACKAGER_FAILURE}" }
+      match => { "logline" => "%{ERROR_PACKAGER_IOERROR}" }
+      match => { "logline" => "%{ERROR_REMOVING_CONTAINER}" }
+      match => { "logline" => "%{CRITICAL_ARCHIVE_NOT_FOUND}" }
     }
 
     date {
@@ -95,16 +114,19 @@ filter {
     grok {
       patterns_dir => [ "/opt/logstash/patterns", "/etc/logstash/patterns" ]
 
-      match => { "message" => "%{DEBUG_ENTER_BFID}" }
-      match => { "message" => "%{DEBUG_REMOVED_ENTRY}" }
-      match => { "message" => "%{DEBUG_STAT}" }
-      match => { "message" => "%{DEBUG_UPDATED_RECORD}" }
-      match => { "message" => "%{ERROR_ERROR}" }
-      match => { "message" => "%{ERROR_IOERROR}" }
-      match => { "message" => "%{WARN_ARCHIVE_NOT_READY}" }
-      match => { "message" => "%{WARN_CONFAILURE}" }
-      match => { "message" => "%{WARN_CURSOR_FAIL}" }
-      match => { "message" => "%{WARN_NO_DB_ENTRY}" }
+      match => { "logline" => "%{INFO_READ_CONFIG}" }
+      match => { "logline" => "%{INFO_DB_CONNECTION}" }
+      match => { "logline" => "%{INFO_PROCESSED_ENTRIES}" }
+      match => { "logline" => "%{DEBUG_ENTER_BFID}" }
+      match => { "logline" => "%{DEBUG_REMOVED_ENTRY}" }
+      match => { "logline" => "%{DEBUG_STAT}" }
+      match => { "logline" => "%{DEBUG_UPDATED_RECORD}" }
+      match => { "logline" => "%{ERROR_ERROR}" }
+      match => { "logline" => "%{ERROR_IOERROR}" }
+      match => { "logline" => "%{WARN_ARCHIVE_NOT_READY}" }
+      match => { "logline" => "%{WARN_CONFAILURE}" }
+      match => { "logline" => "%{WARN_CURSOR_FAIL}" }
+      match => { "logline" => "%{WARN_NO_DB_ENTRY}" }
     }
 
     date {
