Fix date parsing, add cluster, node_name properties for ElasticSearch

--- a/src/skel/etc/logstash/conf.d/logstash.conf
+++ b/src/skel/etc/logstash/conf.d/logstash.conf
@@ -30,6 +30,10 @@ filter {
     match => { "message" => "%{ENTRY_PREFIX}%{GREEDYDATA:logline}" }
   }
   
+  date {
+    match => [ "timestamp", "YYYY-MM-dd HH:mm:ss,SSS" ]
+  }
+
   if [type] == "fillmetadata" 
   {
     grok {
@@ -44,10 +48,6 @@ filter {
       match => { "logline" => "%{WARN_CURSOR_FAIL}" }
       match => { "logline" => "%{WARN_IOERROR}" }
       match => { "logline" => "%{WARN_KEYERROR}" }
-    }
-
-    date {
-      match => [ "timestamp", "YYYY-MM-DD HH:mm:ss,SSS" ]
     }
   }
 
@@ -103,10 +103,6 @@ filter {
       match => { "logline" => "%{ERROR_REMOVING_CONTAINER}" }
       match => { "logline" => "%{CRITICAL_ARCHIVE_NOT_FOUND}" }
     }
-
-    date {
-      match => [ "timestamp", "YYYY-MM-DD HH:mm:ss,SSS" ]
-    }
   } 
 
   if [type] == "writebfids" 
@@ -128,16 +124,16 @@ filter {
       match => { "logline" => "%{WARN_CURSOR_FAIL}" }
       match => { "logline" => "%{WARN_NO_DB_ENTRY}" }
     }
-
-    date {
-      match => [ "timestamp", "YYYY-MM-DD HH:mm:ss,SSS" ]
-    }
   } 
 }
 
 output {
   if "_grokparsefailure" not in [tags] {
-    elasticsearch { host => "zitpcx18435.desy.de" }
+    elasticsearch { 
+      host => "zitpcx18435.desy.de" 
+      cluster => "karstens-elasticsearch"
+      node_name => "dcache-packdb-photon01"
+    }
     stdout { }
   } else {
     file {
