fix logstash patterns, improved logging

--- a/src/skel/etc/logstash/conf.d/logstash.conf
+++ b/src/skel/etc/logstash/conf.d/logstash.conf
@@ -81,16 +81,15 @@ filter {
       match => { "logline" => "%{DEBUG_REMOVING_FILE_ENTRY}" }
 
       match => { "logline" => "%{INFO_CLEANING_UP}" }
-      match => { "logline" => "%{INFO_ENOUGH_BYTES}" }
+      match => { "logline" => "%{INFO_REGULAR_MODE}" }
       match => { "logline" => "%{INFO_GROUP_PACKAGERS}" }
       match => { "logline" => "%{INFO_RUNNING_PACKAGERS}" }
-      match => { "logline" => "%{INFO_NOT_ENOUGH_BYTES}" }
+      match => { "logline" => "%{INFO_OLD_FILE_MODE}" }
       match => { "logline" => "%{INFO_NOT_ENOUGH_BYTES}" }
       match => { "logline" => "%{INFO_NO_OLD_FILES}" }
       match => { "logline" => "%{INFO_STORE_OLD_SUCCESS}" }
       match => { "logline" => "%{INFO_STORE_SUCCESS}" }
       match => { "logline" => "%{INFO_CLEANING_UP}" }
-      match => { "logline" => "%{ENTRY_PREFIX}%{DATA:message}" }
       match => { "logline" => "%{WARN_ADD_FILE_ERROR}" }
       match => { "logline" => "%{WARN_CHKSUM_NOT_IMPLEMENTED}" }
       match => { "logline" => "%{WARN_REMOVING_UNFUL}" }
@@ -115,6 +114,7 @@ filter {
       match => { "logline" => "%{INFO_PROCESSED_ENTRIES}" }
       match => { "logline" => "%{DEBUG_ENTER_BFID}" }
       match => { "logline" => "%{DEBUG_REMOVED_ENTRY}" }
+      match => { "logline" => "%{DEBUG_RENAMING}" }
       match => { "logline" => "%{DEBUG_STAT}" }
       match => { "logline" => "%{DEBUG_UPDATED_RECORD}" }
       match => { "logline" => "%{ERROR_ERROR}" }
