add dcapUrl property in container.conf

--- a/src/skel/etc/dcache/container.conf
+++ b/src/skel/etc/dcache/container.conf
@@ -12,6 +12,7 @@
 # archiveMode=0644
 # mongoUri=mongodb://localhost/
 # mongoDb=smallfiles
+# dcapUrl=dcap://localhost:22125
 # dataRoot=/data
 # mountPoint=/space/sf/dcache
 # loopDelay=5
