ascii encode filename in writeStatus

--- a/src/skel/etc/dcache/container.conf
+++ b/src/skel/etc/dcache/container.conf
@@ -13,6 +13,7 @@
 # mongoUri=mongodb://localhost/
 # mongoDb=smallfiles
 # dcapUrl=dcap://localhost:22125
+# rwsize=1048576
 # dataRoot=/data
 # mountPoint=/space/sf/dcache
 # loopDelay=5
